[tool.poetry]
name = "wwqdrh-logger"
version = "0.1.0"
description = ""
authors = ["wwqdrh <huiloademail@163.com>"]
readme = "README.md"
packages = [{include = "wwqdrh/logger"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
